--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Siêu Khoa</title>
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -137,7 +137,7 @@
           <input type="number" id="quantity" name="quantity" min="1" max="10">
           <label for="pwd">Đánh giá thêm:</label>
             <input type="password" id="pwd" name="pwd">
-            
+
             <input type="submit" value="Ok nha!">
           </form>
 
